# cpptemplate

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh
apps/: CMakeLists.txt  square-app.cc
src/: CMakeLists.txt  square.cc  square.h  stack.cc  stack.h
tests/: CMakeLists.txt  sample_tests.cc
